--- a/01-intro-exercises/001-mailing-address/package.json
+++ b/01-intro-exercises/001-mailing-address/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest --run --reporter verbose",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "Kayyrbek Perdebekov",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vitest": "^0.31.4",
+    "webpack": "^5.85.0",
+    "webpack-cli": "^5.1.1"
+  }
 }
