--- a/01-intro-exercises/001-mailing-address/package.json
+++ b/01-intro-exercises/001-mailing-address/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest --run --reporter verbose",
+    "test:watch": "vitest",
     "build": "webpack"
   },
   "keywords": [],
